--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -1,8 +1,25 @@
 // создаем переменные для scss
 $black: #000;
 $white: #fff;
+$accent: #003B77;
+$accent-second: #99FF99;
+$text: #111827;
+$gray: #F3F3F3;
+$gray2: #D1D5DB;
+$gray3: #9CA3AF;
+$gray4: #6B7280;
+$gray5: #4B5563;
+
 // создаем переменные для css
 :root{
+    --color-accent: #($accent);
+    --color-accent-second: #($accent-second);
+    --color-text: #($text);
+    --color-gray: #($gray);
+    --color-gray2: #($gray2);
+    --color-gray3: #($gray3);
+    --color-gray4: #($gray4);
+    --color-gray5: #($gray5);
     --color-white: #{$white};
     --color-black: #{$black};
     --content-width: 1200px;
