--- a/assets/scss/ui-frame/_button.scss
+++ b/assets/scss/ui-frame/_button.scss
@@ -1,3 +1,12 @@
 .button{
-    // стили для кнопки
+    border: none;
+    background-color:transparent;
+
+}
+
+button {
+    border: none;
+    background-color:transparent;
+    color: white;
+    cursor: pointer;
 }
