--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -14,7 +14,7 @@ $gray5: #4B5563;
 :root{
     --color-accent: #($accent);
     --color-accent-second: #($accent-second);
-    --color-text: #($text);
+    --color-text: #111827;
     --color-gray: #($gray);
     --color-gray2: #($gray2);
     --color-gray3: #($gray3);
