--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -1,31 +1,59 @@
 // подключаем шрифты с помощью font-face
+// @font-face {
+//     font-family: 'SF UI';
+//     src: url(/assets/fonts/SFUIDisplay-Light.woff2) format(woff2);
+//     font-weight: 300;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'SF UI';
+//     src: url(/assets/fonts/SFUIDisplay-Regular.woff2) format(woff2);
+//     font-weight: 400;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'SF UI';
+//     src: url(/assets/fonts/SFUIDisplay-Medium.woff2) format(woff2);
+//     font-weight: 500;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'SF UI';
+//     src: url(/assets/fonts/SFUIDisplay-Semibold.woff2) format(woff2);
+//     font-weight: 600;
+//     font-style: normal;
+// }
+// @font-face {
+//     font-family: 'SF UI';
+//     src: url(/assets/fonts/SFUIDisplay-Bold.woff2) format(woff2);
+//     font-weight: 700;
+//     font-style: normal;
+// }
+
 @font-face {
-    font-family: 'SF UI';
-    src: url(/assets/fonts/SFUIDisplay-Light.woff2) format(woff2);
-    font-weight: 300;
-    font-style: normal;
-}
-@font-face {
-    font-family: 'SF UI';
-    src: url(/assets/fonts/SFUIDisplay-Regular.woff2) format(woff2);
+    font-family: 'Montserrat';
+    src: url(/assets/fonts/Montserrat-Medium.ttf) format(ttf);
     font-weight: 400;
     font-style: normal;
 }
+
 @font-face {
-    font-family: 'SF UI';
-    src: url(/assets/fonts/SFUIDisplay-Medium.woff2) format(woff2);
-    font-weight: 500;
+    font-family: 'Montserrat';
+    src: url(/assets/fonts/Montserrat-Medium.ttf) format(ttf);
+    font-weight: 400;
     font-style: normal;
 }
+
 @font-face {
-    font-family: 'SF UI';
-    src: url(/assets/fonts/SFUIDisplay-Semibold.woff2) format(woff2);
-    font-weight: 600;
+    font-family: 'Montserrat';
+    src: url(/assets/fonts/Montserrat-Medium.ttf) format(ttf);
+    font-weight: 400;
     font-style: normal;
 }
+
 @font-face {
-    font-family: 'SF UI';
-    src: url(/assets/fonts/SFUIDisplay-Bold.woff2) format(woff2);
-    font-weight: 700;
+    font-family: 'Montserrat';
+    src: url(/assets/fonts/Montserrat-Medium.ttf) format(ttf);
+    font-weight: 400;
     font-style: normal;
 }
