--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -1,1 +1,25 @@
 // header style
+.header {
+    .nav {
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+        justify-content: center;
+        width: 100%;
+        &__menu {
+            .navitem {
+                &__item {
+                    color: var(--color-text);
+                    
+                }
+                
+                &__number {
+                    color: var(--color-text);
+                    
+                }
+            }
+            display: flex;
+        }
+
+    }
+}
