--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -1,25 +1,86 @@
 // header style
 .header {
+    border-bottom: 1px solid #D1D5DB; 
     .nav {
+        text-transform: uppercase;
+        
         display: flex;
         margin-left: auto;
         margin-right: auto;
         justify-content: center;
+        align-items: center;
         width: 100%;
+        &__logo {
+            margin-right: auto;
+
+        }
         &__menu {
+            gap: 20px;
+            padding-right: 40px;
+            
             .navitem {
+
+                
                 &__item {
+                    align-items: center;
+                    display: flex;
                     color: var(--color-text);
-                    
+                    gap: 20px;
+                    font-size: 16px;
+                    font-weight: 600;
+                    &:hover {
+                        color: var(--color-accent);
+                        transition: ease-in-out 0.1s;
+                    }
+                    &-text {
+                        margin: 0;
+                        padding: 0;
+                    }
+                    &-image {
+                        left: -15px;
+                        position: relative;
+                    }
+                        
                 }
                 
-                &__number {
-                    color: var(--color-text);
-                    
-                }
             }
+
             display: flex;
         }
+        &__language {
+            display: flex;
+            align-items: center;
+            margin-right: 40px;
+            &-text {
+                color: var(--color-text);
+                font-weight: 600;
+                margin-right: 5px;    
+            }
+            &-icon {
+                align-items: center;
+                
+            }
 
+        }
+
+        &__button {
+            background-color: var(--color-accent);
+            height: 78px;
+            padding: 21px 51px;
+            align-items: center;
+            display: flex;
+            margin-right: 40px;
+
+            &-text {
+                margin-right: 20px;
+                font-size: 16px;
+                font-weight: 700;
+                text-transform: uppercase;
+                
+            }
+            &-arrow {
+
+            }
+        }
     }
 }
