--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -2,3 +2,6 @@
 // в качестве тестового подключения, подключается блок - header
 @import "./components/header";
 @import "./components/general";
+@import "./components/achievements";
+@import "./components/company";
+@import "./components/services";
