--- a/assets/scss/components/_general.scss
+++ b/assets/scss/components/_general.scss
@@ -7,18 +7,104 @@
         overflow: hidden;
     }
     .wbot {
+
+        
         position: relative;
         background: linear-gradient(96.95deg, rgba(0, 42, 85, 0.68) 24.05%, rgba(0, 42, 85, 0) 57.46%), linear-gradient(79.3deg, #002A55 26.57%, rgba(0, 42, 85, 0.76) 51.95%, rgba(12, 37, 94, 0) 88.87%), url("/assets/img/images/fura.png"), #003B77;
         background-size: cover;
         background-position: center;
-        &__text {
-            display: flex;
-            margin: auto;
-            top: -95px;
-            position: relative;
-            
+        .wcont {
+            max-width: 1456px;
+            margin-right: auto;
+            margin-left: auto;
+            &__text {
+                display: flex;
+                margin: auto;
+                top: -95px;
+                position: relative;
+                
+            }
+            &__desc {
+                position: relative;
+                &-title {
+                    
+                    margin: 0;
+                    color: var(--color-accent-second);
+                    font-size: 800;
+                    line-height: 84px;
+                    font-size: 60px;
+                    &--exped {
+                        margin-left: 100px;
+                    }
+                    &--comp {
+                        color: white;
+                    }
+                    
+                    }
+
+                    .servicelevel {
+                        // position: absolute;
+                        // transform: translate(380px,-69px);
+                        margin: -70px 0 0 380px;
+                        &__text {
+                            font-weight: 400;
+                            font-size: 18px;
+                            line-height: 25px;
+                            width: 360px;
+                            margin: 0;
+                        }
+                        &__button {
+                            gap: 10px;
+                            display: flex;
+                            &-text {
+                                font-size: 18px;
+                                font-weight: 500;
+                                text-transform: uppercase;
+                                border-bottom: solid 1px var(--color-white);
+                            }
+                            &-icon {
+                                motion-path: 30px;
+                            }
+                        }
+                    }
+            }
+            .wbut {
+                display: flex;
+                margin-top: 184px;
+                padding-bottom: 20px;
+                position: relative;
+                &__slider {
+                    margin-right: 870px;
+                    display: flex;
+                    gap: 30px;
+                    &-left {
+                        &--arrow {
+                            transform: rotate(180deg);
+                        }
+                    }
+                }
+                &__social {
+                    gap: 60px;
+                    display: flex;
+                    
+                    &-links {
+                        font-size: 16px;
+                        font-weight: 600;
+                    }
+                }
+                &__messenger {
+                    background-color: #012B56;
+                    border-radius: 50px;
+                    padding: 10px;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 23px;
+                    position: absolute;
+                    right: -113px;
+                    top: -240px;
+                }
+            }
         }
+        
     }
 }
-
-
