--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -10,6 +10,7 @@
         justify-content: center;
         align-items: center;
         width: 100%;
+        max-width: 1456px;
         &__logo {
             margin-right: auto;
 
