--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -5,3 +5,12 @@
 @import "./components/achievements";
 @import "./components/company";
 @import "./components/services";
+@import "./components/we";
+@import "./components/partners";
+@import "./components/news";
+@import "./components/faq";
+@import "./components/request";
+@import "./components/burger";
+@import "./components/aboutcompany";
+@import "./components/objectives";
+@import "./components/vision";
