--- a/assets/scss/components/_aboutcompany.scss
+++ b/assets/scss/components/_aboutcompany.scss
@@ -1,19 +1,22 @@
-.welcome {
+.aboutcompany {
     width: 100%;
     
-    &__upper {
-        min-height: 136px;
-        padding-top: 42px;
-        overflow: hidden;
+    .company {
+        &__upper {
+            min-height: 136px;
+            padding-top: 42px;
+            overflow: hidden;
+        }
     }
-    .wbot {
+    .cbot {
 
-        height: 80vh;    
+        height: 590px;    
         position: relative;
-        background: linear-gradient(96.95deg, rgba(0, 42, 85, 0.68) 24.05%, rgba(0, 42, 85, 0) 57.46%), linear-gradient(79.3deg, #002A55 26.57%, rgba(0, 42, 85, 0.76) 51.95%, rgba(12, 37, 94, 0) 88.87%), url("/assets/img/images/fura.png"), #003B77;
+        background: linear-gradient(96.95deg, rgba(0, 42, 85, 0.68) 24.05%, rgba(0, 42, 85, 0) 57.46%), linear-gradient(79.3deg, #002A55 26.57%, rgba(0, 42, 85, 0.76) 51.95%, rgba(12, 37, 94, 0) 88.87%), url("/assets/img/images/trucks.jpg"), #003B77;
+        
         background-size: cover;
-        background-position: center;
-        .wcont {
+        background-position: bottom;
+        .ccont {
             max-width: 1456px;
             margin-right: auto;
             margin-left: auto;
@@ -46,16 +49,17 @@
                         
                     }
 
-                    .servicelevel {
+                    .effective {
                         // position: absolute;
                         // transform: translate(380px,-69px);
-                        margin: -70px 0 0 380px;
+                        margin: 0px 0 0 0;
                         &__text {
                             font-weight: 400;
                             font-size: 18px;
                             line-height: 25px;
                             width: 360px;
                             margin: 0;
+                            
                         }
                         &__button {
                             gap: 10px;
@@ -73,9 +77,9 @@
                         }
                     }
             }
-            .wbut {
+            .cbut {
                 display: flex;
-                margin-top: 184px;
+                margin-top: 214px;
                 padding-bottom: 20px;
                 position: relative;
                 &__slider {
