--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -14,3 +14,4 @@
 @import "./components/aboutcompany";
 @import "./components/objectives";
 @import "./components/vision";
+@import "./components/strategy";
