--- a/assets/scss/components/_request.scss
+++ b/assets/scss/components/_request.scss
@@ -167,6 +167,11 @@
                 &__ref {
                     display: flex;
                     gap: 14px;
+                    align-items: center;
+                    &-image {
+                        height: 20px;
+                        width: 80px;
+                    }
                 }
             }
             
@@ -178,6 +183,7 @@
             bottom: -80px;
             position: absolute;
             overflow: hidden;
+
         }
         
     }
