--- a/assets/scss/_breakpoints.scss
+++ b/assets/scss/_breakpoints.scss
@@ -1,4 +1,5 @@
 $sm: 390px;
+$st: 414px;
 $md: 576px;
 $lg: 768px;
 $xl: 820px;
@@ -29,3 +30,8 @@ $xxl: 990px;
         @content;
     }
  }
+@mixin st {
+    @media (max-width: #{$st}) {
+        @content;
+    }
+}
