--- a/assets/scss/components/_partners.scss
+++ b/assets/scss/components/_partners.scss
@@ -50,13 +50,34 @@
             
 
             &-item {
-
+                
                 min-height: 349px;
                 
                 background-color: var(--color-gray1);
             }
             .it2 {
-                
+                grid-column: span 1;
+                height: 349px;
+                display: flex;
+                align-items: center;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            .it3 {
+                grid-column: span 1;
+                height: 349px;
+                display: flex;
+                align-items: center;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            .it4 {
+                grid-column: span 1;
+                height: 349px;
+                display: flex;
+                align-items: center;
+                margin-left: auto;
+                margin-right: auto;
             }
             .it1 {
                 background-image: url(/assets/img/images/chemistry.jpeg);
@@ -65,6 +86,48 @@
                 grid-column: span 2;
                 
             }
+            .it5 {
+                grid-column: span 2;
+                height: 349px;
+                display: flex;
+                align-items: center;
+                margin-left: auto;
+                margin-right: auto;
+            }       
+            .it6 {
+                background-color: var(--color-accent-second);
+                display: flex;
+                align-items: center;
+                max-width: 349px;
+                gap: 10px;
+                
+
+
+
+
+                // .pcont__col-item--text {
+                    
+                    
+                // }
+                // .pcont__col-item--image {
+                //     filter:hue-rotate(120deg);
+                //     filter: brightness(80%);
+                    
+                // }
+            }
+            .bubilda {
+                gap: 10px;
+                margin-left: auto;
+                display: flex;
+                margin-top: 294px;
+                &__text {
+                    font-size: 18px;
+                    font-weight: 500;
+                    border-bottom: solid 1px var(--color-accent);
+                    color: var(--color-accent);
+                }   
+            }
+            
         }
 
     }
