--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -15,3 +15,12 @@
 @import "./components/objectives";
 @import "./components/vision";
 @import "./components/strategy";
+@import "./components/managment";
+@import "./components/history";
+@import "./components/servgen";
+@import "./components/description";
+@import "./components/servitems";
+@import "./components/offer";
+@import "./components/abcompany";
+@import "./components/newsgen";
+@import "./components/new";
