--- a/assets/scss/components/_strategy.scss
+++ b/assets/scss/components/_strategy.scss
@@ -1,6 +1,7 @@
 .strategy {
     background-color: var(--color-accent);
     padding-top: 140px;
+    margin-top: 140px;
     padding-bottom: 140px;
     .stcont {
         max-width: 1456px;
