--- a/assets/scss/components/_achievements.scss
+++ b/assets/scss/components/_achievements.scss
@@ -40,3 +40,41 @@
         }
     }
 }
+
+.acont {
+    width: 100%;
+    max-width: 1456px;
+    margin-left: auto;
+    margin-right: auto;
+
+    &__title {
+        font-size: 52px;
+        font-weight: 300;
+        color: var(--color-accent);
+        margin-bottom: 40px; /* Отступ снизу */
+        text-align: left; /* Выравнивание текста по левому краю */
+
+    }
+
+    &__cards {
+        display: flex;
+        gap: 80px;
+        width: 100%;
+        
+        &-card {
+            flex: 1;
+            &--title {
+                color: var(--color-text);
+                font-weight: 600;
+                font-size: 22px;
+                border-bottom: 1px solid var(--color-gray2);
+                padding-bottom: 20px;
+            }
+            &--number {
+                color: var(--color-accent);
+                font-size: 42px;
+                font-weight: 500;
+            }
+        }
+    }
+}
