--- a/assets/scss/components/_we.scss
+++ b/assets/scss/components/_we.scss
@@ -3,40 +3,104 @@
         max-width: 1456px;
         margin-left: auto;
         margin-right: auto;
+        margin-top: 140px;
+        margin-bottom: 140px;
         &__title {
-
+            font-size: 52px;
+            color: var(--color-accent);
+            font-weight: 400;
         }
         &__cards {
-            display: grid;
             grid-template-columns: repeat(2,1fr);
-            grid-row: 1 / 3;
+            grid-template-rows: repeat(2,1fr);
+            display: grid;
+            
+            padding: 0;
+            margin: 0;
+            width: min-content;
+            gap: 20px;
+            margin-left: 369px;
             .wcard {
-                &__hover {
-                    display: none;
-                }
-                &__nothover {
-                    width: 472px;
-                    height: 472px;
-                    background: linear-gradient(135deg, #09325B 0%, rgba(69, 99, 233, 0.3) 100%), #09325B;
-                    border-radius: 4px;
-                    &-picture {
-                        position: relative;
-                        align-items: center;
-                        justify-content: center;
-                        display: flex;
+                max-width: 472px;
+                &:hover {
+                    .wcard__nothover {
+                        display: none;
                         
-                        &--icon {
-                            
-                        }
-                        &--image {
-                            
-                            
-                        }
+                    }
+                    .wcard__hover {
+                        display: block;
                     }
                 }
+                &__nothover {
+                    background: linear-gradient(135deg, #09325B 0%, rgba(69, 99, 233, 0.3) 100%), #09325B;
+                    width: 472px;
+                    height: 472px;
+                    display: flex;
 
+                    flex-direction: column;
+                    justify-content: space-between;
+                    &-title {
+                        font-weight: 500;
+                        font-size: 22px;
+                        color: var(--color-white);
+                        line-height: 30px;
+                        max-width: 214px;
+                        margin-left: 40px;
+                        margin-top: 40px;
+                    }
+                    &-picture {
+                        position: relative;
+                        padding-left: 136px;
+                        padding-right: 136px;
+                        
+                        &--icon {
+                            position: absolute;
+                            left: 65%;
+                            top: -15%;
+                            
+                        }
+                        
+                    }
+                    &-number {
+                        font-size: 80px;
+                        line-height: 112px;
+                        font-weight: 400;
+                        margin: 0;
+                        margin-left: 50px;
+                        margin-bottom: 25px;
+                    }
 
-
+                }
+                &__hover {
+                    
+                    border-radius: 6px;
+                    border: solid 1px var(--color-gray2);
+                    display: none;
+                    background-color: var(--color-white);
+                    width: 472px;
+                    height: 472px;
+                    &-title {
+                        
+                        font-weight: 500;
+                        font-size: 22px;
+                        color: var(--color-text);
+                        line-height: 30px;
+                        max-width: 214px;
+                        padding-top: 20px;
+                        padding-left: 40px;
+                    }
+                    &-subtitle {
+                        padding-left: 40px;
+                        max-width: 309px;
+                        color: var(--color-text);
+                        font-size: 16px;
+                        line-height: 22px;
+                        font-weight: 400;
+                    }
+                }
+            }
+            .cardleft {
+                margin-top: 40px;
             }
         }
     }
@@ -44,3 +108,4 @@
 
 /* Card */
 
+/* Card */
