--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -9,7 +9,7 @@
 @import "./components/partners";
 @import "./components/news";
 @import "./components/faq";
-@import "./components/request";
+//@import "./components/request"; Заменено Contact
 @import "./components/burger";
 @import "./components/aboutcompany";
 @import "./components/objectives";
@@ -25,3 +25,5 @@
 @import "./components/newsgen";
 @import "./components/new";
 @import "./components/newsdet";
+@import "./components/hire";
+@import "./components/contact";
