--- a/assets/scss/components/_achievements.scss
+++ b/assets/scss/components/_achievements.scss
@@ -7,7 +7,13 @@
         max-width: 1456px;
         margin-left: auto;
         margin-right: auto;
+        @include xxl {
+            max-width: 800px;
 
+        }
+        @include lg {
+            max-width: 700px;
+        }
         &__title {
             font-size: 52px;
             font-weight: 300;
@@ -21,7 +27,10 @@
             display: flex;
             gap: 80px;
             width: 100%;
-            
+            @include xxl {
+                display: grid;
+                grid-template-columns: repeat(2,1fr);
+            }
             &-card {
                 flex: 1;
                 &--title {
