--- a/assets/scss/components/_faq.scss
+++ b/assets/scss/components/_faq.scss
@@ -5,16 +5,24 @@
         max-width: 1456px;
         margin-left: auto;
         margin-right: auto;
+        @include xxl {
+            max-width: 800px;
+        }
+        @include lg {
+            max-width: 700px;
+        }
         &__title {
             font-size: 52px;
             color: var(--color-accent);
             font-weight: 400;
             margin-bottom: 60px;
+
             
         }
         &__items {
             display: flex;
             flex-direction: column;
+
             gap: 20px;
             .accord {
                 
