--- a/assets/scss/components/_general.scss
+++ b/assets/scss/components/_general.scss
@@ -13,19 +13,48 @@
         background: linear-gradient(96.95deg, rgba(0, 42, 85, 0.68) 24.05%, rgba(0, 42, 85, 0) 57.46%), linear-gradient(79.3deg, #002A55 26.57%, rgba(0, 42, 85, 0.76) 51.95%, rgba(12, 37, 94, 0) 88.87%), url("/assets/img/images/fura.png"), #003B77;
         background-size: cover;
         background-position: center;
+        @include xxl {
+            
+        }
         .wcont {
             max-width: 1456px;
             margin-right: auto;
             margin-left: auto;
+            
+            @include xxl {
+                max-width: 800px;
+                
+            }
+            @include lg {
+                max-width: 700px;
+            }
+            @include md {
+                max-width: 600px;
+            }
             &__text {
                 display: flex;
                 margin: auto;
                 top: -95px;
                 position: relative;
+                @include xxl {
+                    width: 890px;
+                    margin-left: auto;
+                    padding-right: 110px;
+                    width: 800px;
+                
+                }
+                @include md {
+                    width: 680px;
+
+
+                }
                 
             }
             &__desc {
                 position: relative;
+                @include md {
+                    margin-left: auto;
+                }
                 &-title {
                     
                     margin: 0;
@@ -33,8 +62,16 @@
                     font-size: 800;
                     line-height: 84px;
                     font-size: 60px;
+                    @include md {
+                        font-size: 50px;
+                        line-height: 60px;
+                        margin-left: 20px;
+                    }
                     &--exped {
                         margin-left: 100px;
+                        @include md {
+                            margin-left: 0;
+                        }
                     }
                     &--comp {
                         color: white;
@@ -50,6 +87,10 @@
                         // position: absolute;
                         // transform: translate(380px,-69px);
                         margin: -70px 0 0 380px;
+                        @include md {
+                            margin: 0;
+                            margin-left: 20px;
+                        }
                         &__text {
                             font-weight: 400;
                             font-size: 18px;
@@ -89,6 +130,9 @@
                     }
                 }
                 &__social {
+                    @include xxl {
+                        display: none;
+                    }
                     gap: 60px;
                     display: flex;
                     
@@ -98,6 +142,9 @@
                     }
                 }
                 &__messenger {
+                    @include xxl {
+                        display: none;
+                    }
                     background-color: #012B56;
                     border-radius: 50px;
                     padding: 10px;
