--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -11,17 +11,57 @@
         align-items: center;
         width: 100%;
         max-width: 1456px;
+        @include xxl {
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        @include lg {
+            max-width: 700px;
+        }
+        @include md {
+            max-width: 600px;
+
+        }
+        @include st {
+            max-width: 414px;
+            justify-content: space-between;
+            
+        }
+        
+        &__mobile {
+            display: none;
+            @include st {
+                display: block;
+            }
+            @include md {
+                display: block;
+                margin-right: auto;
+            }
+        }
         &__logo {
             margin-right: auto;
-
+            @include st {
+                display: none;
+                
+            }
+            @include md {
+                display: none;
+            }
         }
         &__menu {
             gap: 20px;
             padding-right: 40px;
-            
+            @include st {
+                display: none;
+            }
+            @include xxl {
+                display: none;
+                
+            }
             .navitem {
 
-                
+                position: relative;
                 &__item {
                     align-items: center;
                     display: flex;
@@ -52,6 +92,12 @@
             display: flex;
             align-items: center;
             margin-right: 40px;
+            @include st {
+                display: none;
+            }
+            @include lg {
+                display: none;
+            }
             &-text {
                 color: var(--color-text);
                 font-weight: 600;
@@ -71,8 +117,27 @@
             align-items: center;
             display: flex;
             margin-right: 40px;
-
+            @include st {
+                
+                padding-left: 21px;
+                padding-right: 21px;
+                height: 48px;
+                margin-right: 20px;
+                margin-left: auto;
+                width: 212px;
+                &-text {
+                    
+                }
+            }
+            @include md {
+                padding: 0 21px;
+            }
             &-text {
+                @include st {
+                    font-size: 14px;
+                    
+                    text-overflow:ellipsis;
+                }
                 margin-right: 20px;
                 font-size: 16px;
                 font-weight: 700;
@@ -83,5 +148,21 @@
 
             }
         }
+    }
+}
+
+
+
+
+.serve {
+    &:hover {
+        &__dropdown {
+            display: flex;
+        }
+    }
+
+
+    &__dropdown {
+        display: none;
     }
 }
