--- a/assets/scss/components/_news.scss
+++ b/assets/scss/components/_news.scss
@@ -10,6 +10,12 @@
         flex-direction: column;
         padding-top: 140px;
         padding-bottom: 140px;
+        @include xxl {
+            max-width: 800px;
+        }
+        @include lg {
+            max-width: 700px;
+        }
         &__title {
             font-size: 52px;
             font-weight: 400;
@@ -21,6 +27,9 @@
             &-image {
                 width: 738px;
                 height: 575px;
+                @include xxl {
+                    display: none;
+                }
             }
             .necards {
                 &__items {
@@ -40,6 +49,7 @@
                     &-link {
                         display: flex;
                         margin-top: 40px;
+                        
                         &--title {
                             margin-right: 20px;
                             font-size: 18px;
