--- a/assets/scss/components/_we.scss
+++ b/assets/scss/components/_we.scss
@@ -1,5 +1,8 @@
 .we {
     .wecont {
+        @include lg {
+            max-width: 700px;
+        }
         max-width: 1456px;
         margin-left: auto;
         margin-right: auto;
@@ -20,8 +23,13 @@
             width: min-content;
             gap: 20px;
             margin-left: 369px;
+            @include xxl {
+                margin: 0;
+                
+            }
             .wcard {
                 max-width: 472px;
+
                 &:hover {
                     .wcard__nothover {
                         display: none;
@@ -35,6 +43,14 @@
                     background: linear-gradient(135deg, #09325B 0%, rgba(69, 99, 233, 0.3) 100%), #09325B;
                     width: 472px;
                     height: 472px;
+                    @include xxl {
+                        width: 372px;
+                        height: 372px;
+                    }
+                    @include lg {
+                        width: 350px;
+                        
+                    }
                     display: flex;
 
                     flex-direction: column;
@@ -52,6 +68,11 @@
                         position: relative;
                         padding-left: 136px;
                         padding-right: 136px;
+                        @include xxl {
+                            padding-left: 80px;
+                            padding-right: 80px;
+                            position: relative;
+                        }
                         
                         &--icon {
                             position: absolute;
@@ -68,11 +89,24 @@
                         margin: 0;
                         margin-left: 50px;
                         margin-bottom: 25px;
+                        @include xxl {
+                            font-size: 40px;
+                            position: relative;
+                            top: -40px;
+                            margin-left: 30px;
+                        }
                     }
 
                 }
                 &__hover {
-                    
+                    @include xxl {
+                        width: 372px;
+                        height: 372px;
+                    }
+                    @include lg {
+                        width: 350px;
+                        
+                    }
                     border-radius: 6px;
                     border: solid 1px var(--color-gray2);
                     display: none;
