--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -27,3 +27,5 @@
 @import "./components/newsdet";
 @import "./components/hire";
 @import "./components/contact";
+@import "./components/contgen";
+@import "./components/contlinks";
