--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -26,5 +26,5 @@ $gray5: #4B5563;
     --container-padding: 15px;
     --container-width: calc(var(--content-width) + (var(--container-padding) * 2));
     --font-size: 16px;
-    --font-family: 'SF UI', sans-serif;
+    --font-family: 'Montserrat', sans-serif;
 }
