--- a/assets/scss/components/_company.scss
+++ b/assets/scss/components/_company.scss
@@ -10,6 +10,9 @@
         @include lg {
             max-width: 700px;
         }
+        @include st {
+            max-width: 374px;
+        }
         &__text {
             &-title {
                 font-size: 52px;
@@ -24,6 +27,11 @@
                 width: 100%;
                 font-weight: 400;
                 line-height: 33.6px;
+                @include st {
+                    padding: 0;
+                    font-size: 18px;
+                    line-height: 25px;
+                }
             }
         }
 
@@ -36,6 +44,10 @@
                 }
                 @include lg {
                     width: 700px;
+                }
+                @include st {
+                    width: 100vw;
+                    
                 }
             }
             .dot {
@@ -80,6 +92,9 @@
             display: flex;
             gap: 10px;
             align-items: center;
+            @include st {
+                margin-top: 20px;
+            }
             &-text {
                 padding-bottom: 2px;
                 font-size: 18px;
